<resources>
    <string name="app_name">My Shop</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="is_administrator">Is administrator :</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember Me :</string>
    <string name="product_name">Product Name</string>
    <string name="cash">cash</string>
    <string name="price">Price</string>
    <string name="new_product">New Product</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
</resources>