<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".ui.AddNewProduct">

    <ImageView
        android:id="@+id/iv_add_product"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@mipmap/ic_launcher"
        android:layout_weight="2"
        android:textColor="@color/purple_500" />

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:layout_weight="1"
        android:background="@drawable/et_general_background"
        android:ems="13"
        android:hint="@string/product_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_500"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:layout_weight="1"
        android:background="@drawable/et_general_background"
        android:ems="13"
        android:hint="@string/price"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_500"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:layout_weight="2"
        android:background="@drawable/et_general_background"
        android:ems="13"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="number"
        android:maxLines="3"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/purple_500"
        android:textColorHint="@color/purple_500"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginStart="30dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:layout_marginEnd="20dp"
            android:textColor="#000000"
            android:layout_gravity="start"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/sw_is_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_add_product"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/btn_general_background"
        android:ems="12"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/white" />



    </LinearLayout>

</LinearLayout>